--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()  // maven { url("https://maven.google.com") } for Gradle <= 3
+        google()
+        mavenCentral() // Make sure this is included to resolve dependencies
     }
     dependencies {
-        classpath("com.google.android.gms:oss-licenses-plugin:0.10.5")
+        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.5' // Ensure this line is present
     }
 }
 
